# cs6120-tasks

./: .gdbinit  .gitignore  block.cpp  block.hpp  cfg.cpp  cfg.hpp  instr.cpp  instr.h  operator.cpp  operator.h  pretty_json.txt  type.cpp  type.h  utils.cpp  utils.h  value.cpp  value.h
lesson11/: brili-gc.ts
lesson11/test/: brench.toml  turnt.toml
lesson12/: brili-trace.ts  simple.bril  simple.json
lesson13/: synthesis.py
lesson13/test/: eq.txt  ge.txt  gt.txt  le.txt  lt.txt  mod.txt  neq.txt
lesson2/: fib.json  fib.out  most_freq_control  most_freq_control.cpp  mycfg.py  turnt.toml
lesson3/: CMakeLists.txt  cfg  cfg.cpp  cfg.hpp  config.toml  form_blocks.cpp  global_unused  global_unused_instrs.cpp  global_unused_instrs.hpp  local_analysis_opt.cpp  local_kill_instrs.cpp  local_kill_instrs.hpp  local_opt  local_value_number.cpp  local_value_number.hpp  locally_killed  lvn  opt.json  result.csv  utils.cpp  utils.hpp
lesson3/data/: empty.bril  empty.json  empty_dce1.json  id.bril  id.json  id_lvn.json  lvn.bril  lvn.json  lvn_lvn.json  mixed.bril  mixed.json  mixed_dce1.json  mixed_dce2.json  opt.bril  opt.json  reassign.bril  reassign.json  reassign_dce1.json  reassign_dce2.json  simple_dce1.json  two_pass_dce1.json
lesson4/: compile.sh  data_flow.cpp  data_flow.hpp  df  lesson4.cpp  turnt.toml
lesson4/data/: add.out  cond-args.out  fact.out  loop.bril  loop.json  purdue-ps8.bril  (+1 more)
lesson5/: turnt.toml
lesson6/: compile.sh  lesson6.cpp  ssa.cpp  ssa.h  turnt.toml
lesson8/: compile.sh  licm.cpp  licm.h  nat_loop.cpp  nat_loop.h  test.cpp
(+106 files in other folders)
